kubernetes/clusters/hyperion/rustfs/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-console
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://rustfs.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "rustfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-svc
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-s3
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://s3.rustfs.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "s3.rustfs.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-svc
                port:
                  number: 9000
